# CHI-academy_cpp

./: .gitignore  README.md
lab1/: .gitignore  CMakeLists.txt  README.md  Txt.hpp  l1.cpp
lab2/: main.cpp
lab3/: CMakeLists.txt  README.MD
lab3/lib/: CMakeLists.txt
lab3/lib/include/: priority_queue_with_messages_timestamps.hpp
lab4/: CMakeLists.txt  README.MD  main.cpp
lab4/src/: CMakeLists.txt
lab4/src/Matrix_lib/: CMakeLists.txt
lab4/src/Matrix_lib/include/: Matrix.hpp
lab5/: CMakeLists.txt  README.md
lab5/lib/: CMakeLists.txt
lab5/lib/include/: analyzer.hpp  priority_queue_with_messages_timestamps.hpp
lab5/tests/: CMakeLists.txt  test_lab5.cpp  test_priority_queue_with_messages.cpp
